--- a/src/css/our_experince.css
+++ b/src/css/our_experince.css
@@ -9,6 +9,7 @@
 }
 
 .expe1 {
+    border: none;
     background-color: #055597 !important;
     color: white !important;
     height: 96% !important;
@@ -20,9 +21,10 @@
     height: 96% !important;
 }
 
-.card {
+.card{
     border: none !important;
     border-radius: 0px !important;
+    
 }
 
 /* To ensure equal column height */
