--- a/src/components/contactus/ContactImage.css
+++ b/src/components/contactus/ContactImage.css
@@ -1,15 +1,15 @@
+
+
 .Contact{
   position: relative;
   width: 100%;
-  aspect-ratio: 16 / 9; 
+   aspect-ratio: 16 / 9; 
   background: url("../../../src/assets/images/Group\ 1000005624.png") center center / cover no-repeat;
-  /* display: flex; */
+  display: flex;
   align-items: center;
   justify-content: center;
   overflow: hidden;
-  margin: 0px 0;
 
-  
 }
 
 /* Larger screens */
