--- a/src/components/contactus/ContactSection.css
+++ b/src/components/contactus/ContactSection.css
@@ -261,12 +261,29 @@
 
 .error-message {
   color: #ff3b3b;
-  font-size: 16px;
-  margin-top: 10px;
+  font-size: 12px;
+  margin-top: -9px;
+  margin-bottom: 10px;
   font-weight: 400;
-  text-align: center;
+  text-align:left;
   align-items: center;
 }
 
+.char-count {
+  font-size: 12px;
+  color: #666;
+  margin-top: 0px;
+  text-align: left;
+}
 
+.char-count {
+  font-size: 12px;
+  margin-top:-10px;
+  text-align: left;
+  color: #666;
+}
+
+.char-count.exceeded {
+  color: red;
+}
 
