--- a/src/css/our_experince.css
+++ b/src/css/our_experince.css
@@ -21,11 +21,11 @@
     height: 96% !important;
 }
 
-.card{
+/* .card{
     border: none !important;
     border-radius: 0px !important;
     
-}
+} */
 
 /* To ensure equal column height */
 .row {
