--- a/src/components/careers/CareersSections.css
+++ b/src/components/careers/CareersSections.css
@@ -112,10 +112,12 @@
   min-height: 130px;
 }
 
-/* ROW SPACING */
-.row {
+/* this is sakski doing dhananjay commited*/
+/* .row {
   margin-bottom: 18px;
-}
+} */
+
+
 
 .col-md-6 {
   padding: 0 10px;
