--- a/src/css/testmonials.css
+++ b/src/css/testmonials.css
@@ -24,6 +24,7 @@
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1) !important;
     height: 100% !important;
     transition: transform 0.3s ease, box-shadow 0.3s ease !important;
+    border: 0px !important;
 }
 
 
