--- a/src/css/vission.css
+++ b/src/css/vission.css
@@ -1,8 +1,11 @@
 .cards-container {
     display: flex;
-    gap: 20px; /* spacing between cards */
-    align-items: stretch; /* make cards equal height regardless of content */
-    flex-wrap: wrap; /* allow wrapping on small screens */
+    gap: 20px;
+    /* spacing between cards */
+    align-items: stretch;
+    /* make cards equal height regardless of content */
+    flex-wrap: wrap;
+    /* allow wrapping on small screens */
 }
 
 .vissionpara {
@@ -25,20 +28,21 @@
     background-color: #E5E5E5 !important;
     border-top-right-radius: 150px !important;
     border-bottom-right-radius: 150px !important;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 
 }
+
 .mission_card_start {
     padding: 30px;
     padding-left: 10px;
     background-color: #0D1678 !important;
     border-top-left-radius: 150px !important;
     border-bottom-left-radius: 150px !important;
-box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px !important;
 }
 
-.missionpara{
-     display: flex;
+.missionpara {
+    display: flex;
     justify-content: space-between;
     align-items: center;
     color: #8a8a8a;
@@ -112,6 +116,11 @@ box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 
     font-family: "Outfit", sans-serif !important;
     font-size: 40px;
     font-weight: 600;
+    margin: 0px 0px 0px 0px !important;
+}
+
+.mission_name {
+    padding-left: 80px;
 }
 
 @media (max-width: 768px) {
@@ -126,11 +135,15 @@ box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 
         border-top-right-radius: 0 !important;
         border-bottom-right-radius: 0 !important;
     }
-    .mission_card_start{
+
+    .mission_card_start {
         border-top-left-radius: 0 !important;
         border-bottom-left-radius: 0 !important;
     }
-  
+
+    .mission_name {
+        padding-right: 20px;
+    }
 }
 
 @media (min-width: 481px) and (max-width: 768px) {
@@ -143,10 +156,12 @@ box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 
         border-top-right-radius: 150px !important;
         border-bottom-right-radius: 150px !important;
     }
-    .mission_card_start{
+
+    .mission_card_start {
         border-top-left-radius: 150px !important;
         border-bottom-left-radius: 150px !important;
     }
+
 }
 
 @media (max-width: 768px) {
@@ -169,8 +184,18 @@ box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 
 
     .namecard {
         text-align: end;
+
     }
-   
+
+    .mission_name {
+        padding: 0px !important;
+        padding-right: 0px !important;
+    }
+
+    .card_name {
+        padding: 0px !important;
+        padding-right: 0px !important;
+    }
 
 }
 
@@ -188,7 +213,7 @@ box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 
         height: auto;
 
     }
-   
+
 
 
 }
@@ -198,17 +223,20 @@ box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 
         text-align: right;
         margin-left: 0;
     }
-      .mission_name{
-            text-align: right !important;
+
+    .mission_name {
+        text-align: right !important;
     }
 }
 
 .vission_card_start {
-    flex: 1 1 45%; /* take up roughly half container, shrink if needed */
+    flex: 1 1 45%;
+    /* take up roughly half container, shrink if needed */
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background-color: #E5E5E5; /* or your background */
+    background-color: #E5E5E5;
+    /* or your background */
     border-top-right-radius: 150px;
     border-bottom-right-radius: 150px;
     padding: 30px 10px;
@@ -220,7 +248,9 @@ box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 
     .cards-container {
         flex-direction: column;
     }
-    .vission_card_start, .mission_card_start {
+
+    .vission_card_start,
+    .mission_card_start {
         flex: 1 1 100%;
         border-top-right-radius: 0;
         border-bottom-right-radius: 0;
