--- a/src/css/service_card.css
+++ b/src/css/service_card.css
@@ -18,6 +18,7 @@
   font-size: 40px;
   padding-left: 27px;
   text-align: left !important; /* default for mobile */
+  line-height: 110% !important;
 }
 
 /* Desktop view - 992px and above */
@@ -124,4 +125,15 @@
   display: flex !important;
   flex-direction: column !important;
   justify-content: left !important;
+}
+
+
+@media (min-width: 768px) and (max-width: 1024px) {
+  .service_card_para {
+    display: -webkit-box;
+    -webkit-line-clamp: 4;    /* Only tablet → 4 lines */
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
 }
