--- a/src/css/services.css
+++ b/src/css/services.css
@@ -1,7 +1,7 @@
 .service_heading_name {
     font-family: "Outfit", sans-serif;
     color: #055597;
-    font-size: 40px;
+    font-size: 45px;
     /* Desktop font size */
     font-weight: 700;
     line-height: 100%;
@@ -37,13 +37,19 @@
 
 @media (max-width: 768px) {
     .service_heading_name {
-        font-size: 24px;
+        font-size: 30px;
     }
 }
 
+.img2_from_service{
+  padding: 5px;
+  text-align: center !important;
+  justify-content: center!;
+}
 .circle_card_styling {
-    height: 200px !important;
-    width: 200px !important;
+    height: 160px !important;
+    width: 160px !important;
+    padding: 10px;
     overflow: hidden !important;
     border-top: 2px solid black !important;
 
@@ -57,7 +63,7 @@
 
 .rounded_card1_data {
     font-family: "Outfit", sans-serif;
-    font-size: 36px;
+    font-size: 26px;
     font-weight: 500;
     line-height: 100%;
     letter-spacing: 4% !important;
@@ -68,12 +74,15 @@
 }
 @media (max-width: 1024px) { /* Tablet */
   .rounded_card1_data {
-    font-size: 28px !important;  /* smaller font for tablets */
+    font-size: 24px !important;  /* smaller font for tablets */
   }
 }
 
 @media (max-width: 768px) { /* Mobile */
   .rounded_card1_data {
-    font-size: 25px !important;  /* even smaller font for mobiles */
+    font-size: 22px !important;  /* even smaller font for mobiles */
+  }
+  .img2_from_service{
+    padding: 0px !important;
   }
 }
