--- a/src/css/service_faq.css
+++ b/src/css/service_faq.css
@@ -198,7 +198,8 @@
     background-image: url('../../public/assets/services/faq_service_back.png');
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center top; /* positions image at top center */
+    background-position: center top;
+    /* positions image at top center */
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -319,6 +320,7 @@
     align-items: flex-start;
     text-align: left;
     width: 100%;
+    
 }
 
 
@@ -341,7 +343,9 @@
     font-weight: 600;
     font-size: 22px !important;
     padding: 15px 16px !important;
-    border: none;
+    border: none !important;
+    outline: none !important;
+    box-shadow: none !important;
 }
 
 /* Mobile view (576px and below) */
@@ -379,7 +383,7 @@
 }
 
 .servicefaq {
-    border: none;
+    border: none !important;
     border-radius: 0px !important;
     font-size: 22px !important;
 }
@@ -389,11 +393,19 @@
 }
 
 .backbtn_color:focus,
-.backbtn_color:active {
+.backbtn_color:active,
+.backbtn_color:focus-visible {
     outline: none !important;
     box-shadow: none !important;
-    border: none;
+    border: none !important;
 }
+
+.icon_box:focus {
+    outline: none !important;
+    box-shadow: none !important;
+    border: none !important;
+}
+
 
 
 .servicefaq {
@@ -437,3 +449,61 @@
     transform: rotate(-180deg);
     /* Rotates up */
 }
+
+.contactUs_container .contactUs_name {
+    color: black;
+    cursor: pointer;
+    transition: 0.3s ease;
+    display: inline-flex;
+    align-items: center;
+}
+
+.contactUs_container .contactUs_name .link-icons {
+    color: black;
+    transition: 0.3s ease;
+}
+.contactUs_container:hover .contactUs_name,
+.contactUs_container:hover .contactUs_name .link-icons {
+    color: #e8a725 !important;
+}
+/* Default: dot visible */
+/* Column base */
+.faq-column {
+    position: relative;
+    padding-bottom: 50px;
+}
+
+/* White Dot */
+.faq-column::after {
+    content: "";
+    position: absolute;
+    bottom: 15px; 
+    left: 50%;
+    transform: translateX(-50%);
+    width: 18px;
+    height: 18px;
+    background-color: white;
+    border-radius: 50%;
+    z-index: 2;
+}
+
+/* Horizontal line intersecting dot center */
+.faq-column::before {
+    content: "";
+    position: absolute;
+    bottom: 24px;        /* vertically align to dot center */
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background-color: #FFFFFF4D;
+    z-index: 1;
+}
+
+/* Hide both dot + line on mobile */
+@media (max-width: 767px) {
+    .faq-column::after,
+    .faq-column::before {
+        display: none;
+    }
+}
+
